--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ nav ul li{
 
 nav ul a{
     color: #0779e4;
-    font-size: 18px;
+    font-size: 17px;
     font-weight: 700;
     text-decoration: none;
     padding: 7px 10px;
@@ -49,6 +49,7 @@ nav ul a.active, a:hover{
 nav #icon{
     float: right;
     line-height: 80px;
+    margin-right: 40px;
     cursor: pointer;
     display: none;
 }
@@ -56,25 +57,25 @@ nav #icon{
 .bars{
     background: #0779e4 ;
     display: inline-block;
-    height: 3.5px;
+    height: 4px;
     position: relative;
-    width: 22px;
+    width: 24px;
     transition: 0.5s;
 }
 .bars::before,.bars::after{
     background: #0779e4;
     content: '';
     display: inline-block;
-    height: 3.5px;
+    height: 4px;
     position: absolute;
-    width: 22px;
+    width: 24px;
     transition: 0.5s;
 }
 .bars::before{
-    top: 6px;
+    top: 8px;
 }
 .bars::after{
-    top: -6px;
+    top: -8px;
 }
 
 #icon.close .bars{
@@ -87,4 +88,36 @@ nav #icon{
 #icon.close .bars::after{
     top: 0;
     transform: rotate(135deg);
+}
+
+@media (max-width: 1068px){
+    label.logo{
+        padding-left: 60px;
+    }
+    nav ul{
+        margin-right: 20px;
+    }
+}
+
+@media (max-width: 768px){
+    nav #icon{
+        display: block;
+    }
+    nav ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        top: 80px;
+        left: 0;
+        text-align: center;
+    }
+    nav ul li{
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+    nav ul a.active, a:hover{
+        border: none;
+        color: #000000;
+    }
 }
