--- a/css/style.css
+++ b/css/style.css
@@ -108,8 +108,10 @@ nav #icon{
         width: 100%;
         height: 100vh;
         top: 80px;
-        left: 0;
+        left: -100vw;
         text-align: center;
+        background: #fbf6f0;
+        transition: all 0.5s;
     }
     nav ul li{
         display: block;
@@ -121,6 +123,6 @@ nav #icon{
         color: #000000;
     }
     nav ul.show{
-        bottom: 0;
+        left: 0;
     }
 }
