--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ nav #icon{
     }
     nav ul a:hover{
         border: none;
-        color: #892cdc;
+        color: #52057b;
     }
     nav ul.show{
         left: 0;
