--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,12 @@ section#home{
     font-size: 50px;
 }
 
+.home-container button{
+    margin: 20px;
+    font-size: 18px;
+    padding: 10px 25px;
+}
+
 .home-container img{
     width: 700px;
     height: 650px;
