--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,8 @@ section#service{
 }
 
 section#sub{
-    height: 80vh;
+    height: 100vh;
+    width: 100%;
     background: #0779e4;
+    position: absolute;
 }
