--- a/css/style.css
+++ b/css/style.css
@@ -268,8 +268,46 @@ section#service{
 }
 
 section#sub{
-    height: 100vh;
     width: 100%;
     background: #0779e4;
     position: absolute;
+}
+
+#sub .sub-container{
+    padding: 50px 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.sub-container .sub-card{
+    width: 300px;
+    display: flex;
+    align-items: left;
+    justify-content: left;
+    flex-direction: column;
+}
+.sub-container img{
+    width: 300px;
+    height: 250px;
+    border-radius: 20px;
+}
+.sub-container h2{
+    padding: 10px;
+    font-size: 28px;
+    color: #ffffff;
+}
+.sub-container p{
+    padding: 5px 10px 15px 10px;
+    line-height: 1.1;
+    color: #ffffff;
+    font: 16px;
+}
+
+@media(max-width: 768px){
+    .sub-container{
+        flex-direction: column;
+    }
+    .sub-container .sub-card{
+        margin: 0px 20px;
+    }
 }
