--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cabin&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Zilla+Slab&display=swap');
 
 *{
     margin: 0;
@@ -303,6 +304,7 @@ section#sub{
     line-height: 1.1;
     color: #ffffff;
     font: 17px;
+    font-family: 'Zilla Slab', serif;
 }
 
 @media(max-width: 768px){
@@ -310,6 +312,6 @@ section#sub{
         flex-direction: column;
     }
     .sub-container .sub-card{
-        margin: 0px 20px;
+        margin: 20px 0px;
     }
 }
