--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Zilla+Slab&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital@1&display=swap');
 
 *{
     margin: 0;
@@ -380,6 +382,7 @@ section#sub{
 .swiper h1{
     text-align: center;
     font-size: 40px;
+    font-family: 'Lato', sans-serif;
     color: #0779e4;
     text-transform: uppercase;
     text-shadow: #52057b;
@@ -412,9 +415,11 @@ section#sub{
     font-size: 35px;
     color: #0779e4;
     padding: 20px;
+    font-family: 'Merriweather', serif;
 }
 .teachers .t-card p{
     font-size: 18px;
+    font-family: 'Kanit', sans-serif;
     color: #52057b;
     padding: 10px;
     word-break: break-all;
