--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Assistant&display=swap');
 
 *{
     margin: 0;
@@ -382,6 +383,7 @@ section#sub{
 .swiper h1{
     text-align: center;
     font-size: 40px;
+    font-weight: bold;
     font-family: 'Lato', sans-serif;
     color: #0779e4;
     text-transform: uppercase;
@@ -415,7 +417,7 @@ section#sub{
 }
 .teachers .t-card p{
     font-size: 18px;
-    font-family: 'Kanit', sans-serif;
+    font-family: 'Assistant', sans-serif;
     color: #52057b;
     padding: 10px;
     word-break: break-all;
