--- a/css/style.css
+++ b/css/style.css
@@ -435,3 +435,51 @@ section#sub{
         font-size: 18px;
     }
 }
+
+.course-section{
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.course-section .course-head{
+    color: #0779e4;
+    text-align: center;
+}
+.course-head h1{
+    font-size: 35px;
+    text-transform: uppercase;
+}
+.border{
+    height: 2px;
+    width: 90px;
+    margin: 20px auto;
+    background-color: #0779e4;
+}
+.course-section .course-container{
+    padding: 60px;
+    width: 90vw;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.course-section .course-content{
+    width: 25%;
+    text-align: center;
+}
+
+.course-section .course-content img{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+}
+.course-section .course-content h2{
+    font-size: 28px;
+    text-transform: uppercase;
+    padding: 20px;
+    color: #0779e4;
+}
