--- a/css/style.css
+++ b/css/style.css
@@ -459,8 +459,8 @@ section#sub{
     background-color: #0779e4;
 }
 .course-section .course-container{
-    padding: 60px;
-    width: 90vw;
+    padding: 60px 120px;
+    width: 100%;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
@@ -470,12 +470,12 @@ section#sub{
 .course-section .course-content{
     width: 25%;
     text-align: center;
+    margin-bottom: 30px;
 }
 
 .course-section .course-content img{
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
+    width: 120px;
+    height: 120px;
 }
 .course-section .course-content h2{
     font-size: 28px;
