--- a/css/style.css
+++ b/css/style.css
@@ -483,3 +483,13 @@ section#sub{
     padding: 20px;
     color: #0779e4;
 }
+
+@media (max-width: 768px){
+    .course-container{
+        flex-direction: column;
+        align-items: center;
+    }
+    .course-container .course-content{
+        width: 100%;
+    }
+}
