--- a/css/style.css
+++ b/css/style.css
@@ -493,3 +493,48 @@ section#sub{
         width: 100%;
     }
 }
+
+.faq-section{
+    background-color: #ffffff;
+    padding: 30px 0px 50px 0px;
+}
+
+.accordion {
+    background-color: #0779e4;
+    color: #ffffff;
+    cursor: pointer;
+    padding: 18px;
+    width: 80%;
+    margin-left: 10%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+  }
+  
+  .active, .accordion:hover {
+    background-color: #0779e4;
+  }
+  
+  .accordion:after {
+    content: '\002B';
+    color: #ffffff;
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
+  }
+  
+  .active:after {
+    content: "\2212";
+  }
+  
+  .panel {
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
+    width: 80%;
+    margin-left: 10%;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+  }
