--- a/css/style.css
+++ b/css/style.css
@@ -545,3 +545,7 @@ section#sub{
     overflow: hidden;
     transition: max-height 0.2s ease-out;
   }
+  .panel p{
+      line-height: 1.5;
+      font-size: 16px;
+  }
