--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital@1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Assistant&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Prompt&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+SC&display=swap');
 
 *{
     margin: 0;
@@ -501,6 +503,7 @@ section#sub{
 
 .faq-section h1{
     font-size: 38px;
+    font-family: 'Prompt', sans-serif;
     text-align: center;
     padding: 30px;
     color: #0779e4;
@@ -518,6 +521,7 @@ section#sub{
     outline: none;
     font-size: 15px;
     transition: 0.4s;
+    font-family: 'Noto Sans SC', sans-serif;
   }
   
   .active, .accordion:hover {
@@ -548,6 +552,7 @@ section#sub{
   .panel p{
       line-height: 1.5;
       font-size: 16px;
+      font-family: 'Noto Sans SC', sans-serif;
   }
 
   /*Footer*/
@@ -558,6 +563,7 @@ footer{
 .footer-container{
     display: flex;
     justify-content: space-around;
+    font-family: 'Poppins', sans-serif;
 }
 .footer-container .box{
     width: 33%;
