--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ nav #icon{
         width: 100%;
         height: 100vh;
         top: 80px;
-        left: -100vw;
+        left: -200%;
         text-align: center;
         background: #ffffff;
         transition: all 0.5s;
