--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ nav #icon{
         width: 100%;
         height: 100vh;
         top: 80px;
-        right: 100%;
+        left: 100%;
         text-align: center;
         background: #ffffff;
         transition: all 0.5s;
@@ -141,7 +141,7 @@ nav #icon{
         color: #52057b;
     }
     nav ul.show{
-        right: 0;
+        left: 0;
     }
 }
 
